--- a/weather.css
+++ b/weather.css
@@ -50,11 +50,15 @@ body{
     font-size:26px;
     color:black;
     left:4px;
-    background-color: #FFFFFF;
-    border-style: none;
-    border-radius: 20px;
-    font-family: Palatino,serif;
+    background-color:#FFFFFF;
+    border-width:2px;
+    border-radius: 20px 0px 0px 20px;
+    font-family:'Times New Roman', Times, serif;
     font-weight: 560;
+    border-left: #333333;
+    border-top: #333333;
+    border-bottom: #333333;
+    width:16%;
 }
 #weatherbut{
     position: absolute;
@@ -65,7 +69,7 @@ body{
     background-color: #FFFFFF;
     border-style: none;
     border-radius: 20px;
-    font-family: Palatino,serif;
+    font-family:'Times New Roman', Times, serif ;
     font-weight: 560;
 }
 #aqibut{
@@ -77,7 +81,7 @@ body{
     background-color: #FFFFFF;
     border-style: none;
     border-radius: 20px;
-    font-family: Palatino,serif;
+    font-family: 'Times New Roman', Times, serif;
     font-weight: 560;
 }
 
