--- a/weatheraqi.css
+++ b/weatheraqi.css
@@ -51,10 +51,14 @@ body{
     color:black;
     left:4px;
     background-color: #FFFFFF;
-    border-style: none;
-    border-radius: 20px;
-    font-family: Palatino,serif;
+    border-radius: 20px 0px 0px 20px;
+    font-family: 'Times New Roman', Times, serif;
     font-weight: 560;
+    border-left: #333333;
+    border-top: #333333;
+    border-bottom: #333333;
+    width:16%;
+
 }
 #weatherbut1{
     position: absolute;
@@ -65,7 +69,7 @@ body{
     background-color: #FFFFFF;
     border-style: none;
     border-radius: 20px;
-    font-family: Palatino,serif;
+    font-family: 'Times New Roman', Times, serif;
     font-weight: 560;
 }
 .weather1{
@@ -84,6 +88,14 @@ body{
     font-size: 32px;
 
 }
+#overallaqi{
+    position: relative;
+    top:8px;
+    text-align: center;
+    font-size: 27px;
+    font-family: serif;
+
+}
 #search1{
     position:absolute;
     background-color: black ;
@@ -99,6 +111,165 @@ body{
     height:655px;
     border-radius:20px ;
     position:absolute;
-    left:16%;
+    left:15.5%;
     top:15%;
+}
+#time1{
+    position: absolute;
+    color:black;
+    font-size: 14px;
+    right:3%;
+    top:10px;
+    font-size:25px;
+}
+
+.parambox{
+    position: absolute;
+    display: flex;
+    background-color: #333333;
+    width:77%;
+    height:40%;
+    border-radius: 25px;
+    left:11.5%;
+    top:155%;
+    justify-content: space-between;
+}
+ #coval{
+    background-color: #CCCCCC;
+    width:22%;
+    height:70%;
+    border-radius: 25px;
+    left:11.5%;
+    top:30%;
+}
+#cotitle{
+    position: relative;
+    color:black;
+    font-size: 35px;
+    left:40%;
+    top:-10%;
+
+}
+#no2val{
+    background-color: #CCCCCC;
+    width:22%;
+    height:70%;
+    border-radius: 25px;
+    left:20%;
+    top:30%;
+}
+#no2title{
+    position: relative;
+    color:black;
+    font-size: 35px;
+    left:40%;
+    top:-10%;
+
+}
+#o3val{
+    background-color: #CCCCCC;
+    width:22%;
+    height:70%;
+    border-radius: 25px;
+    left:40%;
+    top:30%;
+}
+#o3title{
+    position: relative;
+    color:black;
+    font-size: 35px;
+    left:45%;
+    top:-10%;
+
+}
+#so2val{
+    background-color: #CCCCCC;
+    width:22%;
+    height:70%;
+    border-radius: 25px;
+    left:70%;
+    top:30%;
+}
+#so2title{
+    position: relative;
+    color:black;
+    font-size: 35px;
+    left:40%;
+    top:-10%;
+
+}
+#pm25title{
+    position: relative;
+    color:black;
+    font-size: 29px;
+    left:37%;
+    top:-10%;
+}
+#pm10title{
+    position: relative;
+    color:black;
+    font-size: 29px;
+    left:37.5%;
+    top:-10%;
+}
+#pm25card{
+    position: absolute;
+    background-color:#817d7d;
+    width:22%;
+    height:60%;
+    border-radius: 25px;
+    left:5%;
+    top:30%;
+    border-style: double;
+    border-color: black;
+
+}
+#pm10card{
+    position: absolute;
+    background-color:#817d7d;
+    width:22%;
+    height:60%;
+    border-radius: 25px;
+    left:30%;
+    top:30%;
+    border-style: double;
+    border-color: black;
+
+}
+.precautions{
+    position: absolute;
+    background-color: #CCCCCC;
+    width:77%;
+    height:40%;
+    border-radius: 25px;
+    left:11.5%;
+    top:192%;
+
+}
+#pretitle{
+    position: relative;
+    top:5px;
+    text-align: center;
+    font-size: 32px;
+   
+
+}
+#status{
+    position: absolute;
+    color:black;
+    font-size: 21px;
+    right:36%;
+    top:55%;
+    font-weight:600;
+    
+}
+#aqistring{
+    position: absolute;
+    color:black;
+    font-size: 21px;
+    right:1%;
+    top:55%;
+    background-color: #CCCCCC;
+    width:34%;
+    text-align: left;
 }
