--- a/weatheraqi.css
+++ b/weatheraqi.css
@@ -46,13 +46,13 @@ body{
 
 #home1{
     position: absolute;
-    top:6px;
-    font-size:26px;
+    top:10px;
+    font-size:21px;
     color:black;
     left:4px;
     background-color: #FFFFFF;
     border-radius: 20px 0px 0px 20px;
-    font-family: 'Times New Roman', Times, serif;
+    font-family:Arial, Helvetica, sans-serif;
     font-weight: 560;
     border-left: #333333;
     border-top: #333333;
@@ -62,14 +62,14 @@ body{
 }
 #weatherbut1{
     position: absolute;
-    top:6px;
-    font-size:26px;
+    top:10px;
+    font-size:21px;
     color:black;
-    left:17%;
+    left:18%;
     background-color: #FFFFFF;
     border-style: none;
     border-radius: 20px;
-    font-family: 'Times New Roman', Times, serif;
+    font-family:Arial, Helvetica, sans-serif;
     font-weight: 560;
 }
 .weather1{
@@ -92,8 +92,8 @@ body{
     position: relative;
     top:8px;
     text-align: center;
-    font-size: 27px;
-    font-family: serif;
+    font-size: 24px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 
 }
 #search1{
