--- a/weatherM.css
+++ b/weatherM.css
@@ -71,6 +71,7 @@ body{
     cursor:pointer;
     height:69%;
 }
+
 .dropdown button{
     position: absolute;
     top:9px;
@@ -85,6 +86,7 @@ body{
     border-right: #333333;
     border-top: #333333;
     border-bottom: #333333;
+    z-index:2;
 }
 .dropdown a{
     color:black;
@@ -101,6 +103,7 @@ body{
     background-color: #FFFFFF;
     left: 29%;
     top:90%;
+    z-index:2;
     display:none;
 }
 .dropdown:hover .content{
@@ -143,7 +146,8 @@ body{
     font-size: 27px;
     top:13%;
     color:white;
-    font-family:Georgia, 'Times New Roman', Times, serif
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    z-index:1;
 }
 #moondata1{
     position: absolute;
